Fix layout issues with lessons container

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -219,6 +219,7 @@ nav input[type="submit"] {
 
 #lessons_container {
   float: right;
+  width: 80%;
   background-color: white;
   border: 5px solid #E88B3D;
   border-radius: 15px;
@@ -240,7 +241,7 @@ nav input[type="submit"] {
 }
 
 #flag .red {
-  
+
 }
 
 #nav_lessons {
@@ -260,7 +261,7 @@ nav input[type="submit"] {
   text-align: left;
   border: 3px solid #3EA0CA;
   border-radius: 9px;
-  width: 20%;
+  width: 160px;
   margin: 2%;
   height: 140px;
 }
